# app-template

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
.github/: dependabot.yml
.github/actions/setup_cache/: action.yml
.github/workflows/: ci_coverage.yml  ci_cpm.yml  ci_documentation.yml  ci_license.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml  initialise.yml  lint.yml
cmake/: CPM.cmake  ccache.cmake  cxx_config.cmake  package-lock.cmake
cmake/test/: add_local_data.cmake  config.cmake  declare_datasource.cmake
doc/: CMakeLists.txt  doxygen_cfg
include/: configuration.hpp  fastq_conversion.hpp
src/: CMakeLists.txt  configuration.hpp  fastq_conversion.cpp  index.cpp  main.cpp  search.cpp
src/tutorial_hibf/: CMakeLists.txt  README.md  build.cpp  count.cpp  index.hpp  main.cpp  search.cpp  sequence_io.hpp  validator.hpp
test/: CMakeLists.txt  api_fastq_coversion_test.cpp  app_test.hpp  cli_fastq_coversion_test.cpp
test/api/: CMakeLists.txt  README.md  convert_fastq_test.cpp
test/cli/: CMakeLists.txt  README.md  cli_test.hpp  fastq_to_fasta_options_test.cpp
test/cmake/: app_datasources.cmake  seqan_require_ccache.cmake
test/coverage/: CMakeLists.txt  README.md
test/data/: README.md  REUSE.toml  datasources.cmake  out.fasta
test/header/: CMakeLists.txt
